# clinic

./: .gitignore  ReadMe.md  pyproject.toml
jbm/: __init__.py  authentications.py  comfunc.py  config.py  patient.py  reports.py  schema.sql  test.wsgi
jbm/static/: base.css  login.css
jbm/templates/: base.html  data_form.html  footer.html  header.html  nav.html  reserve.html  test.html
jbm/templates/authentications/: login.html  password.html  register.html
jbm/templates/doctors/: complaint.html
jbm/templates/patient/: patient.html  register.html  test.html  treatment.html  update.html  visits.html
jbm/templates/reports/: generate.html  report.html  test.html  view.html
virtualenv/: pyvenv.cfg
virtualenv/Scripts/: activate  activate.bat
